  (bug #29018)
* irc: add SASL authentication, with PLAIN and DH-BLOWFISH mechanisms
  (task #8829)
* irc: fix crash with SSL connection if option ssl_cert is set (bug #28752)
* irc: fix bug with SSL connection (fails sometimes when ssl_verify is on)
  (bug #28741)
* irc: add new option irc.look.part_closes_buffer to close buffer when /part
  is issued on channel (task #10295)
* irc: fix PART message received on Undernet server (bug #28825)
* irc: fix bug with /away -all: set or unset future away for disconnected
  servers (bug #29022)
* irc: bug with prefix "!" for mode "a" (channel admin) (bug #29109)
* irc: do not send signals "irc_in" and "irc_in2" when messages are ignored,
  add new signals "irc_raw_in" and "irc_raw_in2"
* irc: add option irc.network.connection_timeout (timeout between TCP connection
  to server and reception of message 001)
* irc: add options irc.look.smart_filter_join and irc.look.smart_filter_quit
* irc: apply smart filter only on channels, not private buffers (bug #28841)
* irc: add option irc.look.item_channel_modes_hide_key to hide channel key
  in channel modes (bug #23961)
* irc: add option irc.look.item_nick_prefix
* irc: add command /map
* irc: add missing commands 276, 343
* irc: fix compilation with old GnuTLS versions (bug #28723)
* logger: allow date format in logger options path and mask (task #9430)
* xfer: fix crash when purging old xfer chats (bug #28764)
* xfer: add signal "xfer_ended" (patch #7081)

Version 0.3.1.1 (2010-01-31)
----------------------------

* irc: fix crash with SSL connection if option ssl_cert is set (bug #28752)
* irc: fix bug with SSL connection (fails sometimes when ssl_verify is on)
  (bug #28741)
* irc: fix compilation with old GnuTLS versions (bug #28723)
* xfer: fix crash when purging old xfer chats (bug #28764)

Version 0.3.1 (2010-01-23)
--------------------------

* core: fix bug with script installation on BSD/OSX (patch #6980)